<?xml version="1.0" encoding="utf-8"?>
	<androidx.cardview.widget.CardView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:cardElevation="0dp"
		app:cardCornerRadius="6dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<androidx.appcompat.widget.AppCompatImageView
				android:id="@+id/icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:background="@drawable/ic_rate_star"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent" />

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/dialog_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/feedback"
				android:textAppearance="@style/TextAppearance.AppCompat.Menu"
				android:textColor="@color/rate_button_color"
				android:textStyle="bold"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/icon"/>


			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/give_five_star"
				android:textAppearance="@style/TextAppearance.AppCompat.Small"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="13sp"
				android:layout_marginTop="6dp"
				android:text="@string/rate_app_dis"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/dialog_title"/>




			<RatingBar
				android:id="@+id/rb_stars"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:numStars="5"
				android:stepSize="1.0"
				android:scaleX="0.9"
				android:scaleY="0.9"
				android:theme="@style/AppRatingBar"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/give_five_star" />

			<androidx.appcompat.widget.AppCompatButton
				android:id="@+id/bt_send"
				android:layout_width="wrap_content"
				android:layout_height="25dp"
				android:background="@drawable/rate_button_blue"
				android:gravity="center"
				android:text="@string/rate_new"
				android:textColor="@android:color/white"
				android:textAllCaps="false"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/rb_stars" />


			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/bt_no"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:gravity="center_horizontal"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/bt_send">

				<androidx.appcompat.widget.LinearLayoutCompat
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="?attr/selectableItemBackgroundBorderless">

					<androidx.appcompat.widget.AppCompatTextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center_horizontal"
						android:text="@string/rating_dialog_maybe_later"
						android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

				</androidx.appcompat.widget.LinearLayoutCompat>

			</androidx.appcompat.widget.LinearLayoutCompat>


		</androidx.constraintlayout.widget.ConstraintLayout>


	</androidx.cardview.widget.CardView>
