<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:cardElevation="0dp"
		app:cardCornerRadius="6dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<androidx.appcompat.widget.AppCompatImageView
				android:id="@+id/icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			    android:layout_marginTop="10dp"

				android:background="@drawable/ic_rate_feedback"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent" />

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/dialog_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/feedback"
				android:textAppearance="@style/TextAppearance.AppCompat.Menu"
				android:textColor="@color/rate_button_color"
				android:textStyle="bold"

				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/icon"/>

			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/dialog_message"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/spacing_large"
				android:layout_marginStart="5dp"
				android:layout_marginEnd="5dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/dialog_title">

				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/et_feedback"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/rate_background"
					android:gravity="top"
					android:hint="@string/write_your_feedback_here"
					android:lines="3"
					android:padding="@dimen/spacing_middle"
					android:textAppearance="@style/TextAppearance.AppCompat.Small" />

			</androidx.appcompat.widget.LinearLayoutCompat>

			<androidx.appcompat.widget.AppCompatButton
				android:id="@+id/bt_send"
				android:layout_width="wrap_content"
				android:layout_height="25dp"
				android:background="@drawable/rate_button_blue"
				android:gravity="center"
				android:text="@string/feedback_send"
				android:textAllCaps="false"
				android:textColor="@android:color/white"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/dialog_message" />


			<androidx.appcompat.widget.LinearLayoutCompat
				android:id="@+id/bt_no"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:gravity="center_horizontal"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/bt_send">

				<androidx.appcompat.widget.LinearLayoutCompat
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="?attr/selectableItemBackgroundBorderless">

					<androidx.appcompat.widget.AppCompatTextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center_horizontal"
						android:text="@string/rating_dialog_maybe_later"
						android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

				</androidx.appcompat.widget.LinearLayoutCompat>

			</androidx.appcompat.widget.LinearLayoutCompat>


		</androidx.constraintlayout.widget.ConstraintLayout>


	</androidx.cardview.widget.CardView>
